<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CartActivity"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/ll_cart_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ProgressBar
                android:id="@+id/pb_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="30000"
                android:progress="0"
                android:padding="10dp"
                android:progressDrawable="@drawable/progress"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tv_cart_delivery"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="배달 가능"
                    />
                <TextView
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/delivery_tip_info"
                    />
                <ImageButton
                    android:id="@+id/ib_cart_delivery_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:background="@drawable/cart_alldel_btn"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btn_cart_all_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/delivery_all_del"
                />
            <ListView
                android:id="@+id/lv_cart_list"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/delivery_tot_price"
                    android:textSize="20dp"
                    />

                <TextView
                    android:id="@+id/tv_price_total"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:layout_weight="1"
                    android:text="11,900원"
                    android:textSize="20dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/delivery_tip"
                    android:textSize="15dp"
                    />

                <TextView
                    android:id="@+id/tv_delivery_tip"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:layout_weight="1"
                    android:text="3,000원"
                    android:textSize="15dp"
                    />

            </LinearLayout>
            <Button
                android:id="@+id/btn_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_margin="10dp"
                android:text="배달 주문하기"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_cart_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="invisible"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="11"
                android:src="@drawable/cart1_s"
                android:padding="50dp"
                />

            <Button
                android:id="@+id/btn_go_back"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/go_shopping"
                />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>