<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TOSFragment"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="꿀재료와 함께하시려면 \n약관에 동의 해주셔야해요 :)"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:id="@+id/cb_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[필수] 꿀재료 서비스 이용약관"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >
                <Button
                    android:id="@+id/btn_first_TOS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_first_TOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_TOS"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:id="@+id/cb_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[필수] 개인정보 수집 및 이용약관"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >
                <Button
                    android:id="@+id/btn_second_TOS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_second_TOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_TOS"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:id="@+id/cb_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[필수] 광고성 정보 수신 동의"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >
                <Button
                    android:id="@+id/btn_third_TOS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_third_TOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_TOS"
                />
        </LinearLayout>
        <CheckBox
            android:id="@+id/cb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="전체 동의"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btn_TOS_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="완료" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>